# grampus

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.phoenix.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/skills/: implement-phase.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  real-llm-tests.yml  release.yml
dapr/: config.yaml
dapr/components/: lockstore-redis.yaml  pubsub-redis.yaml  statestore-postgres.yaml  statestore-redis.yaml
demos/: __init__.py  demo_hitl.py  demo_trace.py  demo_ui.py
demos/deep_research/: README.md  _mock_client.py  _store.py  agent.py  eval_suite.py  nexus.yaml  run.py
demos/deep_research/agents/: __init__.py  fact_checker.py  researcher.py  supervisor.py  writer.py
demos/deep_research/config/: safety_policy.yaml
demos/deep_research/eval/: baseline.py  cases.py  suite.py
demos/deep_research/tools/: analysis.py  output.py  search.py
demos/rag/: README.md  config.py  ingest.py  rag_agent.py  rag_store.py  rag_tool.py
docs/: architecture.html  index.md  roadmap.html  worklog.html
docs/architecture/: decisions.md  overview.md  security.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: agent-handoffs.md  agent_self_improvement.md  artifact_collaboration.md  causal_analysis.md  code_analysis.md  cost-management.md  deployment.md  document_processing.md  embedding_providers.md  evaluation.md  hierarchical_memory.md  long-horizon-planning.md  market-based-allocation.md  memory.md  model-providers.md  multi-agent-crew.md  multi-agent-debate.md  observability.md  playground.md  plugins.md  red_teaming.md  safety.md  single-agent.md  state-snapshots.md  streaming.md  tools.md  uncertainty.md  user_modeling.md  web-ui.md
docs/reference/: cli.md  config.md  errors.md  evaluation-api.md  memory-api.md  observability-api.md  orchestration-api.md  safety-api.md  tools-api.md
grafana/: docker-compose.grafana.yml  prometheus.yml
grafana/dashboards/: grampus-overview.json  nexus-overview.json
scripts/: init-db.sql  report_test_costs.py  verify_release.sh
src/grampus/: __init__.py
src/nexus/: __init__.py
tests/: conftest.py  test_package.py
tests/causal/: test_inference.py  test_runner_integration.py  test_tracer.py  test_world_model.py
tests/cli/: test_cost.py  test_dev.py  test_eval.py  test_hub_commands.py  test_init.py  test_memory.py  test_playground_cli.py  test_playground_compare.py  test_playground_model_factory.py  test_playground_renderer.py  test_playground_repl.py  test_playground_session.py  test_replay.py  test_run.py  test_run_streaming.py  test_schedule_cli.py
tests/core/: test_cohere.py  test_config.py  test_error_hints.py  test_errors.py  test_logging.py  test_models.py  test_streaming.py  test_types.py
tests/dapr/: conftest.py  test_client.py  test_health.py  test_integration.py  test_jobs.py  test_lock.py  test_pubsub.py  test_schedule_store.py  test_serialization.py  test_state.py
tests/e2e/: conftest.py  test_agent_e2e.py
tests/evaluation/: test_assertions.py  test_baseline.py  test_eval_reporter_store.py  test_eval_run_store.py  test_prompt_versions.py  test_red_team_foundation.py  test_red_team_runner.py  test_reporter.py  test_streaming.py  test_suite.py
tests/hub/: test_deep_research_template.py  test_installer.py  test_manifest.py  test_registry.py  test_renderer.py
tests/integration/: conftest.py  test_benchmarks.py  test_consolidation.py  test_crew.py  test_dapr_pubsub.py  test_dapr_state.py  test_e2e_budget_stop.py  test_e2e_checkpoint_restore.py  test_e2e_memory_persist.py  test_e2e_multi_agent.py  test_e2e_safety_blocks.py  test_e2e_single_agent.py  test_evaluation_suite.py  test_graph.py  test_memory_episodic.py  test_memory_manager.py  test_memory_security.py  test_memory_semantic.py  test_observability.py  test_runner.py  test_safety_pipeline.py  test_sandbox.py  test_tool_executor.py
tests/jupyter/: __init__.py  test_display.py  test_notebook.py
tests/memory/: test_auditor.py  test_consolidation.py  test_embedding_providers.py  test_embeddings.py  test_episodic.py  test_episodic_vector_store.py  test_graph.py  test_lifecycle.py  test_manager.py  test_manager_list_records.py  test_manager_security.py  test_procedural.py  test_procedure_extractor.py  test_procedure_matcher.py  test_provenance.py  test_reflexion.py  test_retriever.py  test_semantic.py  test_semantic_retriever.py  test_semantic_vector_store.py  test_summarizer.py  test_token_counter.py  test_trust.py  test_types.py  test_user_modeling.py  test_validator.py  test_working.py
tests/observability/: test_alerts.py  test_alerts_server.py  test_behavior.py  test_events.py  test_metrics.py  test_metrics_cost_summary.py  test_metrics_endpoint.py  test_phoenix.py  test_tracer.py
tests/orchestration/: test_artifact.py  test_cost_tracker.py  test_crew.py  test_debate.py  test_graph.py  test_handoff.py  test_handoff_remote.py  test_market.py  test_model_router.py  test_nodes.py  test_planning.py  test_runner.py  test_runner_metrics.py  test_runner_streaming.py  test_snapshot.py  test_uncertainty.py
tests/plugins/: test_plugin_hooks.py  test_plugin_manager.py
tests/rag/: test_config.py  test_eval.py  test_ingest_helpers.py  test_rag_store.py  test_rag_tool.py
tests/safety/: test_action_guard.py  test_injection.py  test_pii.py  test_pipeline.py  test_policies.py
tests/server/: test_a2a_routes.py  test_app.py  test_eval_api_routes.py  test_hitl.py  test_models.py  test_openai_compat.py  test_routes.py  test_schedule.py  test_trace.py  test_ui_cost.py  test_ui_evals.py  test_ui_memory.py  test_ui_shell.py  test_webhook.py
tests/tools/: conftest.py  test_boundaries.py  test_executor.py  test_mcp_client.py  test_registry.py  test_sandbox.py
tests/versioning/: test_ab_testing.py  test_cli.py  test_manager.py  test_metrics.py  test_runner_integration.py  test_stats.py  test_store.py  test_types.py
(+530 files in other folders)
