[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-ai"
version = "0.1.0"
description = "Production-grade agentic AI framework built on Dapr"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
keywords = ["ai", "agents", "llm", "dapr", "memory", "orchestration", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.14",
    "httpx>=0.28",
    "structlog>=25.5",
    "click>=8.1",
    "tiktoken>=0.12",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
    "dapr>=1.17",
    "dapr-ext-grpc>=1.17",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://nexus-ai.dev"
Documentation = "https://nexus-ai.dev"
Repository = "https://github.com/nexus-ai/nexus-agentic-platform"
"Bug Tracker" = "https://github.com/nexus-ai/nexus-agentic-platform/issues"
Changelog = "https://github.com/nexus-ai/nexus-agentic-platform/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.97"]
openai = ["openai>=2.0"]
gemini = ["google-genai>=1.0"]
ollama = ["ollama>=0.6"]
phoenix = ["arize-phoenix-otel>=0.6"]
sql = ["sqlalchemy>=2.0", "aiosqlite>=0.19", "greenlet>=3.0"]
langchain = ["langchain-core>=0.2"]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "jinja2>=3.0"]
jupyter = ["ipython>=8.0", "nest_asyncio>=1.6"]
pinecone = ["pinecone[asyncio]>=9.0"]
weaviate = ["weaviate-client>=4.9"]
qdrant = ["qdrant-client>=1.9"]
vectordb = ["pinecone[asyncio]>=9.0", "weaviate-client>=4.9", "qdrant-client>=1.9"]
all = [
    "anthropic>=0.97",
    "openai>=2.0",
    "google-genai>=1.0",
    "ollama>=0.6",
    "arize-phoenix-otel>=0.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "greenlet>=3.0",
    "langchain-core>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "ipython>=8.0",
    "nest_asyncio>=1.6",
    "jinja2>=3.0",
    "pinecone[asyncio]>=9.0",
    "weaviate-client>=4.9",
    "qdrant-client>=1.9",
    "a2a-sdk>=0.3.0",
    "pymupdf4llm>=0.0.17",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
llm = ["anthropic>=0.97", "openai>=2.0", "google-genai>=1.0", "ollama>=0.6"]
a2a = [
    "a2a-sdk>=0.3.0",
]
documents = [
    "pymupdf4llm>=0.0.17",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[project.scripts]
nexus = "nexus.cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "hypothesis>=6.112",
    "testcontainers>=4.14",
    "ruff>=0.15",
    "mypy>=1.20",
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.26",
    "types-PyYAML>=6.0",
    "anthropic>=0.97",
    "openai>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.0",
    "sse-starlette>=2.1",
    "pytest-httpx>=0.35",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]
include = ["src/nexus/templates/**"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true
exclude = ["src/nexus/templates/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--tb=short"]
markers = [
    "integration: marks tests requiring external services (docker, dapr, postgres, redis)",
    "dapr: marks tests requiring a live Dapr sidecar (set DAPR_HTTP_PORT)",
    "e2e: marks full end-to-end scenario tests",
    "benchmark: marks performance overhead tests",
    "slow: marks tests that take > 5 seconds",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/nexus"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0  # Phase 0 — no logic to cover yet; raised in later phases
